--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,10 +4,9 @@
 
 repos:
   - repo: https://github.com/psf/black
-    rev: 22.3.0
+    rev: 22.10.0
     hooks:
       - id: black
-        args: [--line-length=79]
 
   - repo: https://github.com/PyCQA/isort
     rev: 5.10.1
@@ -15,43 +14,45 @@ repos:
       - id: isort
 
   - repo: https://github.com/hakancelikdev/unimport
-    rev: 0.9.6
+    rev: 0.12.2
     hooks:
       - id: unimport
-        args: [--remove, --include-star-import]
+        args:
+          - --remove
+          - --include-star-import
+          - --gitignore
+
+  - repo: https://github.com/hakancelikdev/unexport
+    rev: 0.4.0
+    hooks:
+      - id: unexport
+        exclude: "tests/|__init__.py"
+        args:
+          - --refactor
 
   - repo: https://github.com/myint/docformatter
-    rev: v1.4
+    rev: v1.5.0
     hooks:
       - id: docformatter
         args: [--in-place]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.961
+    rev: v0.991
     hooks:
       - id: mypy
         args: [--no-strict-optional, --ignore-missing-imports, --show-error-codes]
         additional_dependencies: [types-toml==0.1.3]
+        exclude: "tests/"
 
   - repo: https://github.com/pycqa/flake8
-    rev: 4.0.1
+    rev: 5.0.4
     hooks:
       - id: flake8
-
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v2.7.1
-    hooks:
-      - id: prettier
-        args: [--prose-wrap=always, --print-width=88]
+        args:
+          - --max-line-length=120
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
     hooks:
       - id: end-of-file-fixer
         files: "\\.(py|.txt|.yaml|.json|.in|.md|.toml|.cfg|.html|.yml)$"
-
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v2.34.0
-    hooks:
-      - id: pyupgrade
-        args: [--py38-plus]
