--- a/setup.cfg
+++ b/setup.cfg
@@ -1,43 +1,41 @@
 [metadata]
-name = {{project-name}}
-version = attr: {{project-name}}.__version__
-url = https://{{project-name}}.hakancelik.dev/
-author = Hakan Çelik
-author_email = contact@hakancelik.dev
-description = attr: {{project-name}}.__description__
+name = odbm
+version = 0.1.0
+url = https://odbm.hakancelik.dev/
+author = Hakan Celik
+author_email = hakancelikdev@gmail.com
+description = O-dbm is an ORM for dbm.
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = GPL-3.0
-keywords = 
 classifiers =
-    Development Status :: 1 - Planning
+    Development Status :: 3 - Alpha
     Intended Audience :: Developers
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
-    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Programming Language :: Python :: Implementation :: CPython
     Topic :: Software Development :: Libraries :: Python Modules
 project_urls =
-    Documentation = https://{{project-name}}.hakancelik.dev/
-    Issues = https://github.com/hakancelikdev/{{project-name}}/issues/
-    Changelog = https://{{project-name}}.hakancelik.dev/changelog
+    Documentation = https://odbm.hakancelik.dev/
+    Issues = https://github.com/hakancelikdev/odbm/issues/
+    Changelog = https://odbm.hakancelik.dev/changelog
 
 [options]
 python_requires = >=3.8
 include_package_data = true
 zip_safe = true
 packages =
-    {{mypkg}}
-    {{mypkg_subpkg}}
+    odbm
+    odbm.models
+    odbm.models.fields
+    odbm.models.validators
 package_dir =
     =src
 install_requires =
-    {{install_requires}}
 
 [options.extras_require]
 tests =
@@ -49,10 +47,6 @@ docs =
     mkdocs-markdownextradata-plugin==0.2.5
     mkdocs-minify-plugin==0.5.0
     mkdocs-git-revision-date-localized-plugin==1.0.1
-
-[options.entry_points]
-console_scripts =
-    {{project-name}} = {{project-name}}.__main__:main
 
 [options.package_data]
 * =
