--- a/tox.ini
+++ b/tox.ini
@@ -4,16 +4,14 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py38, py39, py310, pre-commit
+envlist = 3.10, pre-commit
 isolated_build = true
 
 [testenv]
 install_command = python -m pip install {opts} {packages}
-extras =
-    test
+extras = tests
 commands =
-    python -m pytest -v --cov {{project-name}} {posargs}
-
+    python -m pytest -v --cov pydbm {posargs}
 
 [testenv:pre-commit]
 skip_install = true
