--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,20 +4,22 @@ on:
     branches:
       - stable
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2.3.4
-      - uses: actions/setup-python@v2.1.4
+      - uses: actions/checkout@v3.1.0
+      - uses: actions/setup-python@v4.3.0
         with:
-          python-version: "3.8"
+          python-version: "3.10"
           architecture: "x64"
 
       - name: Install  Dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -I .[docs]
+          python -m pip install .[docs]
       - name: Build Docs
         run: |
-          git fetch --all 
+          git config --local user.email "hakancelikdev@gmail.com"
+          git config --local user.name "Hakan Celik"
+          git fetch --all
           mkdocs gh-deploy -m "Update Docs" --remote-branch gh-pages
