--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,34 +1,49 @@
-name: Test
+name: test
 on: [push, pull_request]
 jobs:
-  build:
+  run:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.8", "3.9", "3.10"]
+        os: [ubuntu-latest, macos-latest]
+        python-version: ["3.10"]
     steps:
-      - uses: actions/checkout@v2.3.4
+      - uses: actions/checkout@v3.1.0
 
       - name: Set up Python${{ matrix.python-version }}
-        uses: actions/setup-python@v2.1.4
+        uses: actions/setup-python@v4.3.0
         with:
           python-version: ${{ matrix.python-version }}
+          architecture: x64
+
+      - name: Install  Dependencies for Python${{ matrix.python-version }}
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install tox
+      - name: Test with pytest for Python${{ matrix.python-version }}
+        run: |
+          tox -e ${{ matrix.python-version }}
+  coverage:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3.1.0
+
+      - name: Set up Python3.10
+        uses: actions/setup-python@v4.3.0
+        with:
+          python-version: "3.10"
           architecture: x64
 
       - name: Install  Dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -I .[tests]
-
-      - name: Test with pytest
-        run: |
-          python -m pytest tests -v
-
+          python -m pip install .[tests]
       - name: Generate coverage report
         run: |
           pytest --cov=./ --cov-report=xml
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1.0.14
+        uses: codecov/codecov-action@v3.1.1
         with:
           token: ${{secrets.CODECOV_TOKEN }}
+          verbose: true
+          files: ./coverage.xml
