--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = pythonic-dbm
-version = 0.1.1
+version = 0.2.0
 url = https://pydbm.hakancelik.dev/
 author = Hakan Celik
 author_email = hakancelikdev@gmail.com
-description = pydbm is an ORM for dbm.
+description = Pydbm is a more pythonic way to use dbm.
 long_description = file: README.md
 long_description_content_type = text/markdown
 license = GPL-3.0
