--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pythonic-dbm
-version = 0.2.0
+version = 0.3.0
 url = https://pydbm.hakancelik.dev/
 author = Hakan Celik
 author_email = hakancelikdev@gmail.com
@@ -16,6 +16,7 @@ classifiers =
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: Implementation :: CPython
     Topic :: Software Development :: Libraries :: Python Modules
@@ -25,7 +26,7 @@ project_urls =
     Changelog = https://pydbm.hakancelik.dev/changelog
 
 [options]
-python_requires = >=3.10
+python_requires = >=3.9
 include_package_data = true
 zip_safe = true
 packages =
@@ -39,14 +40,14 @@ install_requires =
 
 [options.extras_require]
 tests =
-    pytest==6.2.4
-    pytest-cov==2.12.1
+    pytest==7.2.0
+    pytest-cov==4.0.0
 docs =
-    mkdocs==1.3.0
-    mkdocs-material==8.3.6
+    mkdocs==1.4.2
+    mkdocs-material==8.5.11
     mkdocs-markdownextradata-plugin==0.2.5
-    mkdocs-minify-plugin==0.5.0
-    mkdocs-git-revision-date-localized-plugin==1.0.1
+    mkdocs-minify-plugin==0.6.2
+    mkdocs-git-revision-date-localized-plugin==1.1.0
 
 [options.package_data]
 * =
