--- a/tox.ini
+++ b/tox.ini
@@ -4,16 +4,16 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = 3.10, pre-commit
+envlist = pre-commit,3.9,3.10
 isolated_build = true
+
+[testenv:pre-commit]
+skip_install = true
+deps = pre-commit
+commands = pre-commit run --all-files
 
 [testenv]
 install_command = python -m pip install {opts} {packages}
 extras = tests
 commands =
     python -m pytest -v --cov pydbm {posargs}
-
-[testenv:pre-commit]
-skip_install = true
-deps = pre-commit
-commands = pre-commit run --all-files
