--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,7 @@ docs =
     mkdocs-markdownextradata-plugin==0.2.5
     mkdocs-minify-plugin==0.6.2
     mkdocs-git-revision-date-localized-plugin==1.1.0
+    mike==1.1.2
 
 [options.package_data]
 * =
