Documentations for all features #8

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -133,6 +133,9 @@ nav:
   - Install: installation.md
   - User Guide:
       - tutorial/models.md
+      - tutorial/model-config.md
+      - tutorial/field-types.md
+      - tutorial/validators.md
   - Contributing: CONTRIBUTING.md
   - Changelog: CHANGELOG.md
   - Authors: AUTHORS.md
