--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ classifiers =
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: Implementation :: CPython
@@ -26,7 +27,7 @@ project_urls =
     Changelog = https://pydbm.hakancelik.dev/changelog
 
 [options]
-python_requires = >=3.9
+python_requires = >=3.8
 include_package_data = true
 zip_safe = true
 packages =
