--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = pre-commit,3.9,3.10
+envlist = pre-commit, 3.8, 3.9, 3.10
 isolated_build = true
 
 [testenv:pre-commit]
