--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,8 @@ include_package_data = true
 zip_safe = true
 packages =
     pydbm
+    pydbm.database
+    pydbm.database.data_types
     pydbm.models
     pydbm.models.fields
     pydbm.models.validators
