--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ target-version = ['py39']
 
 [tool.unimport]
 remove = true
-include_start_import = true
+include_star_import = true
 ignore_init = true
 
 [tool.docformatter]
