--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,9 @@
 # Install the git hook scripts, run `$ pre-commit install` to set up the git hook scripts
 # Run against all the files, `$ pre-commit run --all-files`
 # Updating hooks automatically: `$ pre-commit autoupdate`
-
+default_language_version:
+    python: python3.8
+fail_fast: true
 repos:
   - repo: https://github.com/PyCQA/isort
     rev: 5.12.0
@@ -9,7 +11,7 @@ repos:
       - id: isort
 
   - repo: https://github.com/hakancelikdev/unimport
-    rev: 0.16.0
+    rev: 1.0.0
     hooks:
       - id: unimport
         args:
@@ -26,13 +28,13 @@ repos:
           - --refactor
 
   - repo: https://github.com/myint/docformatter
-    rev: v1.6.5
+    rev: v1.7.5
     hooks:
       - id: docformatter
         args: [--in-place]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.3.0
+    rev: v1.5.1
     hooks:
       - id: mypy
         args: [--no-strict-optional, --ignore-missing-imports, --show-error-codes]
@@ -40,7 +42,7 @@ repos:
         exclude: "tests/"
 
   - repo: https://github.com/pycqa/flake8
-    rev: 6.0.0
+    rev: 6.1.0
     hooks:
       - id: flake8
         args:
