--- a/tox.ini
+++ b/tox.ini
@@ -4,10 +4,11 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = pre-commit, 3.8, 3.9, 3.10
+envlist = pre-commit, py39, py310, py311, py312, py313
 isolated_build = true
 
 [testenv:pre-commit]
+basepython = python3.13
 skip_install = true
 deps = pre-commit
 commands = pre-commit run --all-files
