--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -7,19 +7,19 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2.5.0
-      - uses: actions/setup-python@v2.3.3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.13"
           architecture: "x64"
 
-      - name: Install  Dependencies
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade build
       - run: python -m build
       - name: Publish package to TestPyPI
-        uses: pypa/gh-action-pypi-publish@v1.5.1
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.TEST_PYPI_API_TOKEN }}
           repository_url: https://test.pypi.org/legacy/
@@ -28,19 +28,19 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2.5.0
-      - uses: actions/setup-python@v2.3.3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.13"
           architecture: "x64"
 
-      - name: Install  Dependencies
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade build
       - run: python -m build
       - name: Publish a Python distribution to PyPI
-        uses: pypa/gh-action-pypi-publish@v1.5.1
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
           verbose: true
