--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,36 +5,36 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        python-version: ["3.8", "3.9", "3.10"]
+        os: [ubuntu-latest]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
     steps:
-      - uses: actions/checkout@v2.5.0
+      - uses: actions/checkout@v4
 
       - name: Set up Python${{ matrix.python-version }}
-        uses: actions/setup-python@v2.3.3
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
 
-      - name: Install  Dependencies for Python${{ matrix.python-version }}
+      - name: Install Dependencies for Python${{ matrix.python-version }}
         run: |
           python -m pip install --upgrade pip
           python -m pip install tox
       - name: Test with pytest for Python${{ matrix.python-version }}
         run: |
-          tox -e ${{ matrix.python-version }}
+          tox -e py$(echo ${{ matrix.python-version }} | tr -d .)
   coverage:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2.5.0
+      - uses: actions/checkout@v4
 
-      - name: Set up Python3.10
-        uses: actions/setup-python@v2.3.3
+      - name: Set up Python3.13
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.13"
           architecture: x64
 
-      - name: Install  Dependencies
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           python -m pip install .[tests]
@@ -42,7 +42,7 @@ jobs:
         run: |
           pytest --cov=./ --cov-report=xml
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3.1.1
+        uses: codecov/codecov-action@v4
         with:
           token: ${{secrets.CODECOV_TOKEN }}
           verbose: true
