--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,8 +28,8 @@ markdown_extensions:
   - pymdownx.critic
   - pymdownx.details
   - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
   - pymdownx.highlight
   - pymdownx.inlinehilite
   - pymdownx.keys
@@ -52,7 +52,6 @@ markdown_extensions:
 plugins:
   - search:
       separator: '[\s\-\.]+'
-      prebuild_index: true
   - git-revision-date-localized:
       type: date
       enable_creation_date: true
